--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 
 
 <script src="https://kit.fontawesome.com/f03fd448b3.js" crossorigin="anonymous"></script>
-
+<p id="notice"></p>
 <main>
 
    <% if @book.errors.any? %>
