--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,24 +15,9 @@
  */
 @import "bootstrap";
 
-.image1 {
-  background-image: url(image1.jpg);
-}
-.image2 {
-  background-image: url(image2.jpg);
-}
-.image3 {
-  background-image: url(image3.jpg);
-}
-.image4 {
-  background-image: url(image4.jpg);
-}
-.image5 {
-  background-image: url(image5.jpg);
-}
 
-#container{
-  height: 500px;
+.notice {
+  color:green;
 }
 
 
