--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,24 +1,39 @@
  <script src="https://kit.fontawesome.com/f03fd448b3.js" crossorigin="anonymous"></script>
 
+<!--ログインしているユーザー情報-->
  <h2>User info</h2>
     <%= attachment_image_tag user, :profile_image, fallback: "no_image.jpg", size:'80x80' %>
   <table class="table">
     <tbody>
-      <tr></tr>
+      
       <tr>
 	      <th>name</th>
 	      <th><%= user.name %></th>
       </tr>
+      
       <tr>
 	      <th>introduction</th>
 	      <th><%= user.introduction %></th>
       </tr>
+      
+      <tr>
+        <!--フォロー・フォロワー欄　クリックするとエラーになる-->
+        <th>follows</th>
+        <th><%= link_to user.followings.count,relationship_follow_users_path %></th>
+      </tr>
+      <tr>
+        <th>followers</th>
+        <th><%= link_to user.followings.count,relationship_follower_users_path %></th>
+      </tr>
+      
     </tbody>
   </table>
   <div class="row">
     <%= link_to "", edit_user_path(user) , class:"btn btn-outline-secondary btn-block fas fa-user-cog"%>
   </div>
 
+
+  <!--新規投稿フォーム-->
   <h2 class="mt-3">New book</h2>
     <%= form_with model: book, local:true do |f| %>
       <div class="form-group">
