--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 
 <script src="https://kit.fontawesome.com/f03fd448b3.js" crossorigin="anonymous"></script>
-
+<p id="notice"></p>
 <main>
   <div class="container px-5 px-sm-0">
     <div class="row">
