--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,8 @@
   <div class="container px-5 px-sm-0">
     <div class = "row">
       <div class="col-md-3">
-       <%= render 'books/list', book: @book,user: @user %>
+       <%= render "users/info", user: @user %>
+       <%= render 'books/new', book: @book %>
       </div>
       <div class="col-md-8 offset-md-1">
         <h2>Books</h2>
