--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,8 @@
   <div class="container px-5 px-sm-0">
     <div class="row">
       <div class="col-md-3">
-        <%= render 'books/list', book: @book,user: @book_detail.user %>
+        <%= render 'users/info', user: @book_detail.user %>
+        <%= render 'books/new', book: @book %>
       </div>
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
