--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,12 @@
 
 <script src="https://kit.fontawesome.com/f03fd448b3.js" crossorigin="anonymous"></script>
-<p id="notice"></p>
+
 <main>
   <div class="container px-5 px-sm-0">
     <div class="row">
       <div class="col-md-3">
-        <%= render 'books/list', book: @book,user: @user %>
+        <%= render "users/info", user: @user %>
+        <%= render 'books/new', book: @book %>
       </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
