Create view pages

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -29,5 +29,7 @@
     </tbody>
   </table>
   <div class="row">
-    <%= link_to "", edit_user_path(user) , class:"btn btn-outline-secondary btn-block fas fa-user-cog"%>
+    <% if user == current_user %>
+      <%= link_to "", edit_user_path(user) , class:"btn btn-outline-secondary btn-block fas fa-user-cog"%>
+    <% end %>
   </div>
