--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
     <div class="row">
       <div class="col-md-3">
         <%= render "users/info", user: @user %>
+        <%= render "relationships/follow", user: @user %>
         <%= render 'books/new', book: @book %>
       </div>
     <div class="col-md-8 offset-md-1">
