--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -23,7 +23,7 @@
       </tr>
       <tr>
         <th>followers</th>
-        <th><%= link_to user.followings.count,relationship_follower_users_path %></th>
+        <th><%= link_to user.followers.count,relationship_follower_users_path %></th>
       </tr>
       
     </tbody>
