--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,10 +27,10 @@
                 <!--フォローフォロワー機能-->
 
                 <td>
-                  <p>フォロー数：<%= @user.followings.count %></p>
+                  <p>フォロー数：<%= user.followings.count %></p>
                 </td>
                  <td>
-                  <p>フォロワー数：<%= @user.followings.count %></p>
+                  <p>フォロワー数：<%= user.followings.count %></p>
                 </td>
                 <td>
                   <% unless current_user == user %>
