--- a/app/views/relationships/follower_users.html.erb
+++ b/app/views/relationships/follower_users.html.erb
@@ -18,10 +18,10 @@
                 <!--フォローフォロワー機能-->
 
                 <td>
-                  <p>フォロー数：<%= @user.followings.count %></p>
+                  <p>フォロー数：<%= @user.followers.count %></p>
                 </td>
                  <td>
-                  <p>フォロワー数：<%= @user.followings.count %></p>
+                  <p>フォロワー数：<%= @user.followers.count %></p>
                 </td>
                 <td>
                   <% unless current_user == user %>
